- Switched to use wxXmlSerializer 1.3.3:
  - SerializableList content can be directly serialized via XS_SERIALIZE macro.
  
- Added abbility to define fixed connection points for line connections. See wxSFShapeBase::AddConnectionPoint() functions
  and related.
- Implemented simple auto layout algorithms. For more details see wxSFAutoLayout class and wxSFDemo sample project.
- Added function wxSFDiagramManager::IsEmpty() informs user whether the diagram manager contains any shapes.
- Update wxSFDemo project to reflect new features.

Changes in version 1.9.3 beta (2010-12-08):
--------------------------------------------
- Editation of wxSFEditTextShape can be disabled by putting editDISABLED value to wxSFEditTextShape::SetEditType(EDITTYPE type) function.
- Added functions void wxSFShapeCanvas::SetGridLineMult(int multiple) and int wxSFShapeCanvas::GetGridLineMult(). If used then grid lines
  will be drawn in a distance calculated as grid size multiplicated by this value. Default value is 1.
- Added functions void wxSFShapeCanvas::SetGridStyle(int style) and int wxSFShapeCanvas::GetGridStyle() allowing user
  to define grid line style.
- Update wxSFDemo project to reflect new features.
- Added new virtual event handler void wxSFShapeCanvas::OnUpdateVirtualSize(wxRect &virtrct) called during canvas' virtual size update. The function
  allows user to modify calculated virtual canvas size.

Changes in version 1.9.2 beta (2010-06-24):
--------------------------------------------
- Switched to use wxXmlSerializer 1.3.2:
  - Error states/messages aren't displayed by using messageboxes no more. Use wxXmlSerializer::GetErrMessage()
    instead if needed.
  - Serialized data members can be converted to wxVariant (if data type is supported) via xsProperty::ToVariant()
    member function.
  - Added new macro XS_IMPLEMENT_CLONABLE_CLASS2 suitable for classes with two ancestors.
	