@@ -6,7 +6,9 @@ Changes in version 1.10.0 beta (2010-12-22):
 - Added abbility to define fixed connection points for line connections. See wxSFShapeBase::AddConnectionPoint() functions
   and related.
 - Implemented simple auto layout algorithms. For more details see wxSFAutoLayout class and wxSFDemo sample project.
-- Added function wxSFDiagramManager::IsEmpty() informs user whether the diagram manager contains any shapes.
+  Currently supported layouting algorithms are "Circle", "Mesh", "Horizontal Tree" and "Vertical Tree".
+- Added function wxSFDiagramManager::IsEmpty() which informs user whether the diagram manager contains any shapes.
+- Added function wxSFShapeCanvas::CenterShapes() which centers whole diagram in accordance to the shape canvas extent.
 - Update wxSFDemo project to reflect new features.
 
 Changes in version 1.9.3 beta (2010-12-08):
